Initial commit of coinbase digest